<resources>
    <string name="app_name">自由领域</string>
    <string name="index_name">首页</string>
    <!-- Common Message CN[Start] -->
    <string name="welcom_mes">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_CN_mes">添加(+)</string>
    <string name="look_up_CN_mes">查看</string>
    <string name="modify_CN_mes">修改</string>
    <string name="download_CN_mes">下载</string>
    <string name="download_template_CN_mes">下载模板</string>
    <string name="upload_CN_mes">上传</string>
    <string name="download_admin_CN_mes">下载(开发者)</string>
    <string name="download_admin_template_CN_mes">下载模板(开发者)</string>
    <string name="upload_admin_CN_mes">上传(开发者)</string>
    <string name="del_CN_mes">删除(-)</string>
    <string name="function_CN_mes">功能</string>
    <string name="hour_CN_mes">时</string>
    <string name="minute_CN_mes">分</string>
    <string name="second_CN_mes">秒</string>
    <string name="menu_CN_mes">菜单</string>
    <string name="required_CN_mes">※</string>
    <string name="info_CN_mes">◎</string>
    <string name="warning_CN_mes">◆</string>
    <string name="advice_CN_mes">★</string>
    <string name="previous_CN_mes">返回上一级</string>
    <string name="return_CN_mes">返回</string>
    <string name="index_CN_mes">首页</string>
    <!-- Common Message CN[End] -->

    <!-- Common Message US[Start] -->
    <string name="menu_US_mes">Menu</string>
    <string name="add_US_mes">Add(+)</string>
    <string name="modify_US_mes">Modify</string>
    <string name="del_US_mes">Delete(-)</string>
    <string name="function_US_mes">function</string>
    <string name="hour_US_mes">Hour</string>
    <string name="minute_US_mes">Minute</string>
    <string name="second_US_mes">Second</string>
    <string name="download_US_mes">Download</string>
    <string name="download_template_US_mes">Download Template</string>
    <string name="upload_US_mes">Upload</string>
    <string name="previous_US_mes">Previous</string>
    <string name="index_US_mes">Index</string>
    <!-- Common Message US[End] -->

    <!-- 便签功能[Start] -->
    <string name="note_btn_name">便签</string>
    <string name="note_title">随手记录你的生活■</string>
    <string name="note_content">便签内容:</string>
    <string name="note_sub_content">便签内容(副):</string>
    <string name="note_tag">标签:</string>
    <string name="note_id">ID:</string>
    <string name="note_insert_time">录入时间:</string>
    <string name="note_current_id">(主)便签ID:</string>
    <string name="note_current_content">(主)便签内容:</string>
    <string name="note_current_mode">当前模式:</string>
    <string name="note_current_page_level">当前页面级别:</string>
    <string name="note_previous_page_level_one">返回(1级页面)</string>
    <!-- *** Wait Use *** -->
    <string name="note_master_spend_time">路程时间:</string>
    <string name="note_master_address">打卡目的地:</string>
    <string name="note_master_over_flag">完成:</string>
    <string name="note_master_appraisal">评价:</string>
    <string name="note_master_type">打卡类型:</string>
    <string name="note_master_city">打卡城市:</string>
    <string name="note_type_travel">旅游</string>
    <string name="note_type_food">美食</string>
    <string name="note_type_working">工作</string>
    <string name="note_type_else">其他</string>
    <string name="note_master_remark">备注:</string>
    <!-- *** Wait Use *** -->

    <!-- 便签功能[End] -->

    <!-- 炫酷页面展示[Start] -->
    <string name="note_page_main_btn">Show Cool</string>
    <string name="show_page_main_welcome">这里将会为您展示一个非常“Cool”的视觉盛宴！</string>
    <!-- 炫酷页面展示[End] -->
</resources>
